--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <div class="space-y-8 animate-on-scroll">
-                    <div class="space-y-4">
-                        <h1 class="text-5xl md:text-7xl font-black leading-tight">
-                            <span class="hero-gradient bg-clip-text text-transparent">TRANSFORM</span><br>
+                     <div class="space-y-4">
+                        <h1 class="text-4xl sm:text-5xl md:text-7xl font-black leading-tight">
+                            <span class="hero-gradient bg-clip-text text-transparent block sm:inline">TRANSFORM</span><br class="hidden sm:block">
                             YOUR BODY
                         </h1>
                         <p class="text-xl text-gray-600 dark:text-gray-300 max-w-lg">
