--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </nav>
 
-    <section id="home" class="min-h-screen flex items-center relative overflow-hidden">
+    <section id="home" class="min-h-screen flex items-center relative overflow-hidden pt-28 sm:pt-32">
         <div class="absolute inset-0 z-0">
             <img src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" 
                  alt="Gym background" class="w-full h-full object-cover opacity-20">
